# ckanext-antiresist-catalog-theme

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/antiresist_catalog_theme/: plugin.py
ckanext/antiresist_catalog_theme/assets/: script.js  webassets.yml
ckanext/antiresist_catalog_theme/public/: antiresist_catalog_theme.css
ckanext/antiresist_catalog_theme/templates/: base.html  header.html  page.html
ckanext/antiresist_catalog_theme/templates/home/: layout1.html
ckanext/antiresist_catalog_theme/templates/home/snippets/: promoted.html
ckanext/antiresist_catalog_theme/tests/: test_plugin.py
