[metadata]
name = ckanext-antiresist-catalog-theme
version = 0.0.1
description = Custom theme for NCCR AntiResist Data Catalog
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NCCR-AntiResist/ckanext-antiresist-catalog-theme
author = Flavio Ackermann
author_email = flavio.ackermann@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN nccr nccr-antiresist data-catalog

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             antiresist_catalog_theme = ckanext.antiresist_catalog_theme.plugin:AntiresistCatalogThemePlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/antiresist_catalog_theme/i18n/ckanext-antiresist_catalog_theme.pot
width = 80

[init_catalog]
domain = ckanext-antiresist_catalog_theme
input_file = ckanext/antiresist_catalog_theme/i18n/ckanext-antiresist_catalog_theme.pot
output_dir = ckanext/antiresist_catalog_theme/i18n

[update_catalog]
domain = ckanext-antiresist_catalog_theme
input_file = ckanext/antiresist_catalog_theme/i18n/ckanext-antiresist_catalog_theme.pot
output_dir = ckanext/antiresist_catalog_theme/i18n
previous = true

[compile_catalog]
domain = ckanext-antiresist_catalog_theme
directory = ckanext/antiresist_catalog_theme/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
